--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git://github.com/guyromm/NoodlesFramework.git
 [submodule "github_commits"]
 	path = github_commits
-	url = git@github.com:guyromm/github-commits.git
+	url = github-commits:/guyromm/github-commits
